--- a/aula04-semaforo/index.html
+++ b/aula04-semaforo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <scriptsrc="semaforo.js" defer></script>
+    <script src="semaforo.js" defer ></script>
     <title>semaforo</title>
 </head>
 <body>
@@ -20,6 +20,7 @@
             <button id="siga">Siga</button>
             <button id="desacelere" >Desacelere</button>
             <button id="pare">Pare</button>
+            <button name='teste' id='automatico' class="button" >Automático</button>
         </div>
 
     </main>
